@@ -31,6 +31,9 @@ Bruce Merry <bmerry at cs dot uct dot ac dot za>
 btlee
   linkstatus patch (http://forums.gentoo.org/viewtopic-p-2765647.html#2765647)
 
+calmar <mac at calmar dot ws>
+  mboxscan
+
 dan-h <dan-h at users dot sourceforge dot net>
   adt746x fix
 
