@@ -338,7 +338,7 @@
 		<option>(cpuN)</option>
 	</term>
 	<listitem>
-		CPU usage in percents.  For SMP machines, the CPU number can be provided as an argument.  ${cpu 0} is the total usage, and ${cpu X} (X >= 1) are individual CPUs. 
+		CPU usage in percents.  For SMP machines, the CPU number can be provided as an argument.  ${cpu cpu0} is the total usage, and ${cpu cpuX} (X >= 1) are individual CPUs.
 	<para></para></listitem>
 </varlistentry>
 
@@ -964,6 +964,16 @@
 	</term>
 	<listitem>
 		Mail count in mail spool. You can use program like fetchmail to get mails from some server using your favourite protocol. See also new_mails.
+	<para></para></listitem>
+</varlistentry>
+
+<varlistentry>
+	<term>
+		<command><option>mboxscan</option></command>
+		<option>(-n number of messages to print) (-fw from width) (-sw subject width) mbox</option>
+	</term>
+	<listitem>
+		Print a summary of recent messages in an mbox format mailbox.  mbox parameter is the filename of the mailbox (can be encapsulated using '"', ie. ${mboxscan -n 10 "/home/brenden/some box"}
 	<para></para></listitem>
 </varlistentry>
 
