@@ -1,0 +1,10 @@
+/*
+ * $Id$
+ */
+
+#ifndef _MBOXSCAN_H_
+#define _MBOXSCAN_H_
+
+void mbox_scan(char *args, char *output, size_t max_len);
+
+#endif /* _MBOXSCAN_H_ */
